package observer;

public interface ObservadorPedidos {
    void atualizar();
}
