package produtos;

public class Agua extends Bebida {
    public Agua() {
        super("Água", 3.0);
    }
}

