package produtos;

public class XBurger extends Lanche {
    public XBurger() {
        super("X-Burger", 10.0);
    }
}
